tests/pass/complete_if_return.kl
// Regression: non-void function with full if/else coverage must compile without error.
// This previously triggered a false positive in the LLVM codegen.
fn mod(num x) num {
    si x > 0 {
        divolvi x;
    } sinon {
        divolvi 0.0 - x;
    }
}

fn inisiu() {
    mostra(mod(3.0));
    mostra(mod(0.0 - 5.0));
}
